--- a/salesperson_sales_target_app/views/sale_target.xml
+++ b/salesperson_sales_target_app/views/sale_target.xml
@@ -41,8 +41,12 @@
 										<field name="reverse_id" invisible='1'/>
 										<field name="product_id"/>
 										<field name="target_quantity"/>
+										<field name="threshold_quantity"/>
 										<field name="achieve_quantity"/>
+										<field name="achievement_ratio"/>
+										<field name="incentive_unit_product" />
 										<field name="achieve_perc"  widget="progressbar"/>
+										<field name="incentive_pay" />
 									</tree>
 								</field>
 							</page>
